--- a/css_folder/osocom.css
+++ b/css_folder/osocom.css
@@ -5,7 +5,8 @@ body{
        
 }
 #oso{
-    padding: 10px;
+    padding-left: 150px;
+    padding-right: 150px;
     background-color: rgb(239, 242, 245);
     text-align: center;
     margin-top: 30px;
@@ -38,7 +39,7 @@ body{
 }
 .festiv{
     float: left;
-    width: 60%;
+    width: 50%;
 
 
 }
@@ -108,6 +109,8 @@ img{
         font-size: 20px;
         text-align: center;
         margin-top: 30px;
+        padding-left: 0;
+        padding-right: 0;
     
         
     }
@@ -115,6 +118,7 @@ img{
         margin: 0;
         padding: 0;
         text-align: justify;
+
     }
     
     .clearfix::after{
@@ -127,10 +131,7 @@ img{
     .festiv{
         float:none;
         width:100%;
-    
-    
     }
-       
         .osun{
         width: 100%;
         float: none;
@@ -155,21 +156,15 @@ img{
         height: 100px;
         border-radius: 20px;
         margin:auto;
-    
-            
     }
     h2{
         text-align: center;
         font-size: 10px;
-    
-    
     }
     img{
         background-color: black;
     }
     .down{
-        text-align: center;
-        
-        
+        text-align: center;    
     }
 }
