--- a/css_folder/osocom.css
+++ b/css_folder/osocom.css
@@ -2,6 +2,7 @@ body{
     background-image: url('../images/os10.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    padding: 5px;
        
 }
 #oso{
@@ -10,6 +11,7 @@ body{
     background-color: rgb(239, 242, 245);
     text-align: center;
     margin-top: 30px;
+   
     
     
 }
@@ -18,6 +20,13 @@ body{
     font-size: 20px;
     text-align: justify;
     color: teal;
+    padding-left: 18px;
+    padding-right: 18px;
+    list-style: circle;
+}
+li{padding-left: 18px;
+    padding-right: 18px;
+
 }
 #oso p{
     text-indent: 50px;
@@ -109,8 +118,8 @@ img{
         font-size: 20px;
         text-align: center;
         margin-top: 30px;
-        padding-left: 0;
-        padding-right: 0;
+        padding-left: 18px;
+        padding-right: 18px;
     
         
     }
