--- a/css_folder/osogboform.css
+++ b/css_folder/osogboform.css
@@ -1,10 +1,12 @@
 body{
     margin: 2px;}
 
-p.cis{font-size: 20px;
+p.reg-address{font-size: 20px;
     text-align: center;
     margin-top: 50px;
     font-family: Arial, Helvetica, sans-serif;
+    padding: 20px;
+    color: beige;
 
 }
 .float{
@@ -14,9 +16,9 @@ p.cis{font-size: 20px;
     margin-left: 0;
     width: 300px;
     text-align: center;
-
+    
     padding:0;
-    color: black;
+    color:white;
     
     height:auto;
     display: inline-table;
@@ -35,7 +37,8 @@ input{
 
 .nofloat{
     clear:left;
-    text-align:center ;     
+    text-align:center ; 
+       
 }
 
 .no{
@@ -60,6 +63,9 @@ input{
     text-align: center;
     padding: 50px;
     margin-top: 50px;
+}
+
+
 }
 @media (max-width:800px) {
     .float{
