--- a/css_folder/homepage.css
+++ b/css_folder/homepage.css
@@ -3,27 +3,32 @@ body{
 }
 .ataoja{
     background-color:  rgb(239, 242, 245);
-    height: 300px;
-    margin-top: 200px;    
+    height: auto;
+    margin-top: 200px;  
+    display: flex;  
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-bottom: 200px;
 }
 .ata{
-    float: left;
+
     width: 25%;
-    margin-left: 20%;
     margin-top: 40px;
     text-align: justify;
     
 }
 .oja{
-    float: left;
+    
     width: 25%;
     margin-top: 30px;
+    
 }
 
 .oja img{
     height: 250px;
     width: 250px;
-    margin-left: 100px;
+    
 }
 
 .ata p{
@@ -61,10 +66,13 @@ marquee{
     background-color: black;
 }
 
-@media(max-width: 800PX){
+@media(max-width: 964px){
 .ataoja{        margin-top:0;
                 height:auto;
                 width: 100%;
+                display:block;
+                margin-bottom: 150px;
+                
                 
             
 }
@@ -79,7 +87,7 @@ marquee{
 .oja{float: none;
     width: 100%;
     margin-left: 0%;
-    margin-bottom: 200px;
+    margin-bottom: 0px;
 }
 .image{
     
@@ -111,21 +119,3 @@ marquee{
 }
 }
 
-@media (max-width: 1024px)
-{
-    .ata{
-    height: auto;
-    }
-    .ataoja{
-        height:400px;
-        background-color:  rgb(239, 242, 245);
-        margin-bottom:80px ;
-
-    }
-    .oja img{
-        height: 250px;
-        width: 250px;
-        margin-left: 100px;
-        margin-top: 60px;
-    }
-}
