--- a/css_folder/projectosogbo.css
+++ b/css_folder/projectosogbo.css
@@ -243,7 +243,7 @@ img{
                 border: none;
             }
         }
-        @media(max-width: 1030PX){
+        /* @media(max-width: 1030PX){
             .clear{
                 height: auto;
                 width: 100%;
@@ -252,4 +252,4 @@ img{
                 
             }
                 
-            }
+            } */
