--- a/css_folder/homepage.css
+++ b/css_folder/homepage.css
@@ -6,21 +6,26 @@ body{
     height: auto;
     margin-top: 200px;  
     display: flex;  
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content:center;
     margin-bottom: 200px;
+    align-content: center;
+    
+    
+
 }
 .ata{
-
-    width: 25%;
+    padding: 10px;
+    width: 50%;
     margin-top: 40px;
     text-align: justify;
     
 }
 .oja{
-    
-    width: 25%;
+
+    padding: 20px;
+    width: 30%;
     margin-top: 30px;
     
 }
@@ -64,6 +69,17 @@ marquee{
     margin-top: 0;
     color: white;
     background-color: black;
+}
+.sticker{
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    
+    border: 2px ridge lightblue;
+    color: rgb(43, 40, 35);
+    background-color:  rgb(239, 242, 245);
+    font-size: 20px;
+    width: auto;
 }
 
 @media(max-width: 964px){
@@ -117,5 +133,10 @@ marquee{
     padding-bottom: 20px;
 
 }
+}
+@media (max-width:1024px){
+    .ataoja{margin-bottom:490px ;
+
+    }
 }
 
